corrected: network_img overlapped screen width

--- a/responsive.css
+++ b/responsive.css
@@ -92,10 +92,7 @@
         padding-top: 10px;
         font-size: 4.5vw;
     }
-    .image_network {
-        width: 175%;
-        right: 140px;
-    }
+    
     .team h2 {
         font-size: 12vw;
         margin-bottom: 3vh;
